02-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-multi-container
spec:
  containers:
    - name: nginx
      image: nginx
    - name: debug
      image: docker.io/rkalluru/learnk8s:rhel9-bare
