04-pod-network.yml
apiVersion: v1
kind: Pod
metadata:
  name: network-demo
spec:
  containers:
    - name: nginx
      image: nginx
    - name: debug
      image: docker.io/rkalluru/learnk8s:rhel9-bare
