07-side-car-containers.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-demo-side-car
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html
    - name: debug
      image: docker.io/rkalluru/learnk8s:rhel9-bare
      volumeMounts:
        - mountPath: /mnt
          name: html
  volumes:
    - name: html
      emptyDir: {}
