11-deployment.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-demo
  labels:
    project: example
    app: nginx
spec:
#  strategy:
#    rollingUpdate:
#      maxSurge: 1
#      maxUnavailable: 1
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
