13-configmap.yml
apiVersion: v1
kind: Pod
metadata:
  name: envar-demo-cm
  labels:
    purpose: demonstrate-envars
spec:
  containers:
    - name: demo
      image: docker.io/rkalluru/learnk8s:rhel9-bare
---
apiVersion: v1
kind: Pod
metadata:
  name: envfrom-demo-cm
  labels:
    purpose: demonstrate-envars
spec:
  containers:
    - name: demo
      image: docker.io/rkalluru/learnk8s:rhel9-bare
