14-secrets.yml

apiVersion: v1
kind: Pod
metadata:
  name: envar-demo-secret
  labels:
    purpose: demonstrate-secrets
spec:
  containers:
    - name: demo
      image: docker.io/rkalluru/learnk8s:rhel9-bare
---

apiVersion: v1
kind: Pod
metadata:
  name: envfrom-demo-secret
  labels:
    purpose: demonstrate-secrets
spec:
  containers:
    - name: demo
      image: docker.io/rkalluru/learnk8s:rhel9-bare
---

apiVersion: v1
kind: Pod
metadata:
  name: env-secret-mount
spec:
  containers:
    - name: demo
      image: docker.io/rkalluru/learnk8s:rhel9-bare
      volumeMounts:
        - name: foo
          mountPath: "/etc/foo"
          readOnly: true
  volumes:
    - name: foo
      secret:
        secretName: sample-secret
