20-taints.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-non-tolerated
spec:
  containers:
    - name: nginx
      image: nginx
---
