21-node-affinity.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-just-label
spec:
  containers:
    - name: nginx
      image: nginx
  nodeSelector:
    nodetype: app
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-required-affinity
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: nodetype
                operator: In
                values:
                  - app
  containers:
    - name: nginx
      image: nginx
