23-pod-priority.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rs-demo
  labels:
    project: example
    app: nginx
spec:
  replicas: 20
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.24
          resources:
            requests:
              memory: "64Mi"
              cpu: "500m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
