24-topology-contraints.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topology-constraint
  labels:
    project: example
    app: nginx
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 10
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
      containers:
        - name: nginx
          image: nginx:1.24
